# mono

./: Cargo.toml  LICENSE  README.md
apps/tunlrs-server/: Cargo.toml
apps/tunlrs-server/src/: main.rs
client/: bun.lockb  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/lib/tauri/: bindings.ts
client/src/lib/tauri/: ipc.ts
client/src/routes/: +page.svelte
