[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["SoSweetHam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
thiserror = "1.0.64"
taurpc = "0.3.0"

specta = { version = "=2.0.0-rc.9", features = ["export"] }
tokio = { version = "1", features = ["full"] }

tunlrs-dtos = {path="../../packages/tunlrs-dtos"}
